--- a/OneCircleWeb/index.html
+++ b/OneCircleWeb/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -7,7 +7,7 @@
 <body>
 	<h2>What happes in this page, stays in the console!</h2>
 
-	<script src="./bower_components/requirejs/require.js" data-main="./lib/main"></script>
+	<script src="./bower_components/requirejs/require.js" data-main="./scripts/main"></script>
 
 </body>
 </html>
