jquery rendering ok

--- a/OneCircleWeb/index.html
+++ b/OneCircleWeb/index.html
@@ -5,9 +5,10 @@
 	<title>Document</title>
 </head>
 <body>
-	<h2>What happes in this page, stays in the console!</h2>
+	<h1>1Circle</h1>
 
-	<script src="./bower_components/requirejs/require.js" data-main="./scripts/main"></script>
+    <ul id="placelist"></ul>
 
+<script src="./bower_components/requirejs/require.js" data-main="./scripts/main"></script>
 </body>
 </html>
