End of routing bonus exercise

--- a/OneCircleWeb/index.html
+++ b/OneCircleWeb/index.html
@@ -10,7 +10,7 @@
 
     <!--<button data-bind="click: load">Load places</button>-->
 
-    <div data-bind="component: currentComponent">
+    <div data-bind="component: currentView">
         <div id="waitSpinner">
             <img src="/Content/wait-spinner.gif" />
         </div>
