--- a/OneCircleWeb/index.debug.html
+++ b/OneCircleWeb/index.debug.html
@@ -17,6 +17,6 @@
     </div>
 
 
-    <script src="./bower_components/requirejs/require.js" data-main="./main-opt"></script>
+    <script src="./bower_components/requirejs/require.js" data-main="./scripts/main"></script>
 </body>
 </html>
